--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3932,52 +3932,52 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img border="0" width="100%" src="./MMDO_FILES/zhutu.jpg">
+            <img border="0" width="100%" loading="lazy" src="./MMDO_FILES/zhutu.jpg">
           </div>
           <div class="swiper-slide">
-            <img src="./MMDO_FILES/1.jpg" alt="MMDO2025">
+            <img src="./MMDO_FILES/1.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/2.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/2.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/3.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/3.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/4.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/4.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/5.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/5.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/6.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/6.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/7.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/7.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/8.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/8.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/9.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/9.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/10.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/10.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/11.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/11.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/12.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/12.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/13.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/13.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/14.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/14.jpg" loading="lazy" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
-              <img src="./MMDO_FILES/15.jpg" alt="MMDO2025">
+              <img src="./MMDO_FILES/15.jpg" loading="lazy" alt="MMDO2025">
           </div>
         </div>
         <!-- 导航按钮 -->
@@ -4228,7 +4228,7 @@
 
         <tr class="container" id="k1">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="195" src="./MMDO_FILES/zzh.png">
+            <img border="0" width="156" height="195" loading="lazy" src="./MMDO_FILES/zzh.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank">ZhiHui Zhan</a>
               <br><span style="font-size: 12px;">Professor,</span>
@@ -4280,7 +4280,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
 
         <tr class="container" id="k2">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="195" src="./MMDO_FILES/za_new.png">
+            <img border="0" width="156" height="195" loading="lazy" src="./MMDO_FILES/za_new.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.mmdo.org.cn/workshop/cec2025/">Aimin Zhou</a>
               <br><span style="font-size: 12px;">Professor,</span>
@@ -4305,7 +4305,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
        
         <tr class="container" id="k3">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="176" src="./MMDO_FILES/hh.png">
+            <img border="0" width="156" height="176" loading="lazy" src="./MMDO_FILES/hh.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.mmdo.org.cn/workshop/cec2025/">Han Huang</a>
               <br><span style="font-size: 12px;">Professor,</span>
@@ -4331,7 +4331,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
 
         <tr class="container" id="k4">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="195" src="./MMDO_FILES/ryz.png">
+            <img border="0" width="156" height="195" loading="lazy" src="./MMDO_FILES/ryz.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://yazhou-ren.github.io/index.html" target="_blank">Yazhou Ren</a>
               <br><span style="font-size: 12px;">Associate Professor,</span>
@@ -4371,7 +4371,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
 
         <tr class="container" id="k5">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="144" src="./MMDO_FILES/lzc.png">
+            <img border="0" width="156" height="144" loading="lazy" src="./MMDO_FILES/lzc.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank">Zhichao Lu</a>
               <br><span style="font-size: 12px;">Assistant Professor,</span>
@@ -4398,7 +4398,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
      
         <tr class="container" id="k6">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="194.6" src="./MMDO_FILES/lj.png">
+            <img border="0" width="156" height="194.6" loading="lazy" src="./MMDO_FILES/lj.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.mmdo.org.cn/workshop/cec2025/">Jiao Liu</a>
               <br><span style="font-size: 12px;">Research Fellow,</span>
@@ -4511,7 +4511,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
         <tbody>
           <tr class="container" id="l1">
             <td style="vertical-align:top">
-              <img border="0" width="600" height="270" src="./MMDO_FILES/zhongxin-min.png">
+              <img border="0" width="600" height="270" loading="lazy" src="./MMDO_FILES/zhongxin-min.png">
             </td>
             <td>&nbsp;&nbsp;</td>
             <td style="vertical-align:top; display: flex; flex-direction: column; align-items: center;">
@@ -4685,7 +4685,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://en.westlake.edu.cn/faculty/yaochu-jin.html" target="_blank"><img border="0"
-                    height="150" width="120" src="./MMDO_FILES/jyc-clip.png"></a>
+                    height="150" width="120" src="./MMDO_FILES/jyc-clip.png" loading="lazy"></a>
                 <div style="text-align:left"><a href="https://en.westlake.edu.cn/faculty/yaochu-jin.html"
                     target="_blank" style="display: inline-block; margin-bottom: 7px;">Yaochu Jin, PhD, IEEE
                     Fellow</a><br> Chair Professor of AI,<br>School of
@@ -4698,7 +4698,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center; padding-left: 100px;">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://sist.gdufs.edu.cn/info/1763/9947.htm" target="_blank"><img border="0" height="150"
-                    width="120" src="./MMDO_FILES/yxm.jpg"></a>
+                    width="120" src="./MMDO_FILES/yxm.jpg" loading="lazy"></a>
                 <div style="text-align:left"><a href="https://sist.gdufs.edu.cn/info/1763/9947.htm" target="_blank"
                     style="display: inline-block; margin-bottom: 7px;">Xueming Yan, PhD</a><br> Associate
                   Professor,<br>School of Information Science and
@@ -4722,7 +4722,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center; ">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://engineering.lehigh.edu/faculty/lifang-he" target="_blank"><img border="0" height="150"
-                    src="./MMDO_FILES/hlf.jpg"></a>
+                    src="./MMDO_FILES/hlf.jpg" loading="lazy"></a>
                 <div style="text-align:left"><a href="https://engineering.lehigh.edu/faculty/lifang-he" target="_blank"
                     style="display: inline-block; margin-bottom: 7px;">Lifang He, PhD</a><br> Associate
                   Professor,<br>Computer Science &
@@ -4737,7 +4737,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center;padding-left: 100px;">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://teacher.hebut.edu.cn/publish/2023147233e3fb8c11edab95286ed488d6f1008/"
-                  target="_blank"><img border="0" height="150" src="./MMDO_FILES/lqq.jpg"></a>
+                  target="_blank"><img border="0" height="150" src="./MMDO_FILES/lqq.jpg" loading="lazy"></a>
                 <div style="text-align:left"><a
                     href="https://teacher.hebut.edu.cn/publish/2023147233e3fb8c11edab95286ed488d6f1008/" target="_blank"
                     style="display: inline-block; margin-bottom: 7px;">Qiqi Liu, PhD</a><br> Lecturer,<br>School of
@@ -4766,7 +4766,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center;">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="150"
-                    src="./MMDO_FILES/yyc.jpg"></a>
+                    src="./MMDO_FILES/yyc.jpg" loading="lazy"></a>
                 <div style="text-align:left"><a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank"
                     style="display: inline-block; margin-bottom: 7px;">Yingchao Yu</a><br>PhD Student,<br>School of
                   Information Science and Technology,<br>Donghua
@@ -4781,7 +4781,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
             <td style="text-align:center; padding-left: 100px">
               <div style="display: flex; align-items: center;gap: 10px;">
                 <a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="150"
-                    src="./MMDO_FILES/cry.jpg"></a>
+                    src="./MMDO_FILES/cry.jpg" loading="lazy"></a>
                 <div style="text-align:left">
                   <a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank"
                     style="display: inline-block; margin-bottom: 7px;">Runyang Cai</a><br>Master student,<br>School of Information Science and Technology,<br>Guangdong University of Foreign Studies
