--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -4130,7 +4130,7 @@
           <td>
             <ol start="3">
               <li>The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency, by <a href="#session1">Yue Xie</a></li>
-              <li>Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance, <a href="#session1">by Ying Huang</a></li>
+              <li>Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance, by <a href="#session1">Ying Huang</a></li>
               <li>Tensorized Multi-View Subspace Clustering by Tensor Nuclear Norm and Block Diagonal Representation, by <a href="#session1">Gan-yi Tang</a></li>
               <li>LogisticsLLM: Network Freight Price Prediction Based on Large Language Models, by <a href="#session1">Pengfei Lu</a></li>
               <li>Investigation On Convergence Efficiency of Two-Dimensional Adaptive Fourier Decompositions in Image Approximation, by <a href="#session1">Gao You</a></li>
